remove use of deprecated sax parser api