@@ -103,7 +103,7 @@ public class Category {
 
 
     public void set( String key, int value ) {
-        set( key, new Integer( value ) );
+        set( key, Integer.valueOf(value ) );
     }
 
 
